# deviceprofile_device_info_manager

./: CODEOWNERS  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  deviceprofile.gni  hisysevent.yaml  knowledge.md  ohos.build
common/: BUILD.gn  IBusinessCallback.idl
common/include/: device_profile_errors.h  deviceprofile_ipc_interface_code.h
common/include/constants/: distributed_device_profile_constants.h  distributed_device_profile_errors.h
common/include/interfaces/: access_control_profile.h  accessee.h  accesser.h  business_callback_proxy.h  business_callback_stub.h  business_event.h  characteristic_profile.h  characteristic_profile_filter_option.h  device_icon_info.h  device_icon_info_filter_options.h  device_profile.h  device_profile_filter_options.h  distributed_device_profile_enums.h  dp_inited_callback_proxy.h  dp_inited_callback_stub.h  dp_ipc_interface_code.h  dp_parcel.h  dp_subscribe_info.h  dp_sync_options.h  i_business_callback.h  i_distributed_device_profile.h  i_dp_inited_callback.h  i_dp_sync_adapter.h  i_pincode_invalid_callback.h  i_profile_change_listener.h  i_service_info_change_callback.h  i_static_capability_collector.h  i_sync_completed_callback.h  local_service_info.h  pincode_invalid_callback_proxy.h  pincode_invalid_callback_stub.h  product_info.h  profile_change_listener_proxy.h  profile_change_listener_stub.h  query_profile.h  service_info.h  service_info_change_proxy.h  service_info_change_stub.h  service_info_profile.h  service_info_profile_new.h  (+9 more)
common/include/utils/: content_sensor_manager_utils.h  distributed_device_profile_log.h  dp_detect_utils.h  ipc_utils.h  log_utils.h  macro_utils.h  profile_utils.h  single_instance.h
common/src/: device_profile_utils.cpp
common/src/constants/: distributed_device_profile_constants.cpp
common/src/interfaces/: access_control_profile.cpp  accessee.cpp  accesser.cpp  business_callback_proxy.cpp  business_callback_stub.cpp  business_event.cpp  characteristic_profile.cpp  characteristic_profile_filter_option.cpp  device_icon_info.cpp  device_icon_info_filter_options.cpp  device_profile.cpp  device_profile_filter_options.cpp  dp_inited_callback_proxy.cpp  dp_inited_callback_stub.cpp  dp_subscribe_info.cpp  dp_sync_options.cpp  i_profile_change_listener.cpp  local_service_info.cpp  pincode_invalid_callback_proxy.cpp  pincode_invalid_callback_stub.cpp  product_info.cpp  profile_change_listener_proxy.cpp  profile_change_listener_stub.cpp  query_profile.cpp  service_info.cpp  service_info_change_proxy.cpp  service_info_change_stub.cpp  service_info_profile.cpp  service_info_profile_new.cpp  service_info_unique_key.cpp  service_profile.cpp  service_profile_filter_opotions.cpp  sync_completed_callback_proxy.cpp  sync_completed_callback_stub.cpp  sync_options.cpp  trust_device_profile.cpp  trusted_device_info.cpp  user_info.cpp
common/src/utils/: content_sensor_manager_utils.cpp  dp_detect_utils.cpp  ipc_utils.cpp  log_utils.cpp  profile_utils.cpp
common/src/utils_RefactorByAI/: content_sensor_manager_utils_Refactor.cpp  content_sensor_manager_utils_Refactor.h  ipc_utils_Refactor.cpp  ipc_utils_Refactor.h  profile_utils_Refactor.cpp  profile_utils_Refactor.h
common/test/: BUILD.gn
common/test/deviceprofileunittest/: BUILD.gn  device_profile_test.cpp  service_info_test.cpp
common/test/profilechangelistenerstubunittest/: BUILD.gn  profile_change_listener_stub_test.cpp  profile_change_listener_stub_test.h
interfaces/innerkits/core/: BUILD.gn
interfaces/innerkits/core/include/: distributed_device_profile_client.h  distributed_device_profile_proxy.h  idistributed_device_profile.h  profile_event_notifier_stub.h  sync_options.h
interfaces/innerkits/core/src/: distributed_device_profile_client.cpp  distributed_device_profile_client_fail_to_support.cpp  distributed_device_profile_proxy.cpp  distributed_device_profile_proxy_fail_to_support.cpp  profile_event_notifier_stub.cpp
old/interfaces/innerkits/core/: BUILD.gn
old/radar/: BUILD.gn
old/radar/include/: dp_radar_helper.h
old/radar/src/: dp_radar_helper.cpp
old/radar/test/unittest/: BUILD.gn  dp_radar_helper_test.cpp  dp_radar_helper_test.h
old/services/core/: BUILD.gn
old/services/core/include/: distributed_device_profile_service.h  distributed_device_profile_stub.h
old/services/core/src/: distributed_device_profile_service.cpp  distributed_device_profile_stub.cpp
old/services/core/test/: BUILD.gn
radar/: BUILD.gn
radar/include/: dp_radar_helper.h
radar/src/: dp_radar_helper.cpp
radar/test/unittest/: BUILD.gn  dp_radar_helper_test.cpp  dp_radar_helper_test.h
services/core/: BUILD.gn
services/core/include/: distributed_device_profile_service.h  distributed_device_profile_service_new.h  distributed_device_profile_stub_new.h  i_dp_sync_adapter.h
services/core/include/authority/: trust_group_manager.h
services/core/include/businesseventmanager/: business_event_manager.h
services/core/include/common/: dp_services_constants.h
services/core/include/contentsensormanager/: collaboration_info_collector.h  collector.h  content_sensor_manager.h  device_info_collector.h  dms_info_collector.h  pasteboard_info_collector.h  storage_info_collector.h  switch_status_collector.h  syscap_info_collector.h  system_info_collector.h
services/core/include/data_share/: settings_data_manager.h
services/core/include/dbstorage/: device_profile_storage.h  device_profile_storage_manager.h  online_sync_table.h  sync_coordinator.h
services/core/include/devicemanager/: device_info.h  device_manager.h  dp_device_manager.h
services/core/include/dfx/: device_profile_dumper.h  (+1 more)
services/core/src/: distributed_device_profile_service.cpp  distributed_device_profile_service_new.cpp  distributed_device_profile_service_new.cpp_Refactor.cpp  distributed_device_profile_stub.cpp  distributed_device_profile_stub_new.cpp  profile_change_notification.cpp  sync_options.cpp
services/core/test/: BUILD.gn
tools/dp/: BUILD.gn
tools/dp/include/: dp_command.h  shell_command.h
tools/dp/src/: dp_command.cpp  main.cpp  shell_command.cpp
(+411 files in other folders)
