# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

old_device_profile_path = "//foundation/deviceprofile/device_info_manager/old"
old_device_profile_service =
    "//foundation/deviceprofile/device_info_manager/old/services"
old_device_profile_innerkits =
    "//foundation/deviceprofile/device_info_manager/old/interfaces/innerkits"
old_device_profile_test =
    "//foundation/deviceprofile/device_info_manager/old/test"

old_fuzz_test_output_path = "device_info_manager/device_info_manager"

device_profile_path = "//foundation/deviceprofile/device_info_manager/"
device_profile_common = "//foundation/deviceprofile/device_info_manager/common"
device_profile_service =
    "//foundation/deviceprofile/device_info_manager/services/core"
device_profile_innerkits =
    "//foundation/deviceprofile/device_info_manager/interfaces/innerkits/core"
device_profile_test = "//foundation/deviceprofile/device_info_manager/test"

fuzz_test_output_path = "device_info_manager/device_info_manager"
build_flags = [ "-Werror" ]
