# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/deviceprofile/device_info_manager/deviceprofile.gni")

config("distributed_device_profile_common_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include/interfaces",
    "include/constants",
    "include/utils",
    "//third_party/json/include",
  ]
}

ohos_shared_library("distributed_device_profile_common") {
  install_enable = true

  sources = [
    "src/interfaces/access_control_profile.cpp",
    "src/interfaces/accessee.cpp",
    "src/interfaces/accesser.cpp",
    "src/interfaces/characteristic_profile.cpp",
    "src/interfaces/device_profile.cpp",
    "src/interfaces/dp_subscribe_info.cpp",
    "src/interfaces/profile_change_listener_proxy.cpp",
    "src/interfaces/profile_change_listener_stub.cpp",
    "src/interfaces/service_profile.cpp",
    "src/interfaces/sync_completed_callback_proxy.cpp",
    "src/interfaces/sync_completed_callback_stub.cpp",
    "src/interfaces/sync_options.cpp",
    "src/interfaces/trust_device_profile.cpp",
    "src/utils/content_sensor_manager_utils.cpp",
    "src/utils/ipc_utils.cpp",
    "src/utils/profile_utils.cpp",
  ]

  public_configs = [ ":distributed_device_profile_common_config" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "dmsfwk:common_sdk",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  part_name = "device_info_manager"
  subsystem_name = "deviceprofile"
}
