# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/deviceprofile/device_info_manager/deviceprofile.gni")

config("device_info_manager_config") {
  visibility = [ ":*" ]
  visibility += [ "./test/*" ]
  include_dirs = [
    "include",
    "include/contentsensormanager",
    "include/deviceprofilemanager",
    "include/deviceprofilemanager/listener",
    "include/dfx",
    "include/dm_adapter",
    "include/permissionmanager",
    "include/persistenceadapter",
    "include/persistenceadapter/kvadapter",
    "include/persistenceadapter/rdbadapter",
    "include/subscribeprofilemanager",
    "include/trustprofilemanager",
    "include/utils",
    "${device_profile_common}/include/constants",
    "${device_profile_common}/include/interfaces",
    "${device_profile_common}/include/utils",
    "${device_profile_path}/radar/include",
  ]
}

ohos_shared_library("distributed_device_profile_svr") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
    debug = false
  }

  install_enable = true
  sources = [
    "src/contentsensormanager/collaboration_info_collector.cpp",
    "src/contentsensormanager/collector.cpp",
    "src/contentsensormanager/content_sensor_manager.cpp",
    "src/contentsensormanager/dms_info_collector.cpp",
    "src/contentsensormanager/pasteboard_info_collector.cpp",
    "src/contentsensormanager/syscap_info_collector.cpp",
    "src/contentsensormanager/system_info_collector.cpp",
    "src/deviceprofilemanager/device_profile_manager.cpp",
    "src/deviceprofilemanager/listener/kv_data_change_listener.cpp",
    "src/deviceprofilemanager/listener/kv_store_death_recipient.cpp",
    "src/deviceprofilemanager/listener/kv_sync_completed_listener.cpp",
    "src/deviceprofilemanager/listener/sync_subscriber_death_recipient.cpp",
    "src/dfx/device_profile_dumper.cpp",
    "src/distributed_device_profile_service_new.cpp",
    "src/distributed_device_profile_stub_new.cpp",
    "src/dm_adapter/dm_adapter.cpp",
    "src/permissionmanager/permission_manager.cpp",
    "src/persistenceadapter/kvadapter/kv_adapter.cpp",
    "src/persistenceadapter/rdbadapter/rdb_adapter.cpp",
    "src/subscribeprofilemanager/subscribe_profile_manager.cpp",
    "src/trustprofilemanager/trust_profile_manager.cpp",
    "src/utils/event_handler_factory.cpp",
    "src/utils/profile_cache.cpp",
  ]

  deps = [
    "${device_profile_common}:distributed_device_profile_common",
    "${device_profile_path}/radar:device_profile_radar",
  ]

  configs = [ ":device_info_manager_config" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "cJSON:cjson",
    "c_utils:utils",
    "config_policy:configpolicy_util",
    "device_auth:deviceauth_sdk",
    "device_manager:devicemanagersdk",
    "dmsfwk:common_sdk",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "syscap_codec:syscap_interface_shared",
  ]

  part_name = "device_info_manager"
  subsystem_name = "deviceprofile"
}

group("unittest") {
  testonly = true
  deps = [ "test:unittest" ]
}
