# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

device_profile_path = "//foundation/deviceprofile/device_profile_core"

config("dp_tools_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

ohos_executable("dp") {
  install_enable = true

  configs = [ ":dp_tools_config" ]

  sources = [
    "src/dp_command.cpp",
    "src/main.cpp",
    "src/shell_command.cpp",
  ]

  deps = [ "${device_profile_path}/interfaces/innerkits/core:distributed_device_profile_client" ]
  external_deps = [
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  part_name = "device_profile_core"
  subsystem_name = "deviceprofile"
}
