# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")
import("//foundation/deviceprofile/device_info_manager/deviceprofile.gni")

module_output_path = "device_info_manager/commontest"

ohos_unittest("DeviceProfileTest") {
  module_out_path = module_output_path
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  include_dirs = [
    "include/interfaces",
    "include/constants",
    "include/utils",
  ]

  sources = [ "device_profile_test.cpp" ]

  deps = [ "${device_profile_common}:distributed_device_profile_common" ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"DeviceProfileTest\"",
    "LOG_DOMAIN=0xD004400",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "cJSON:cjson",
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "dmsfwk:common_sdk",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

group("device_profile_test") {
  testonly = true
  deps = [ ":DeviceProfileTest" ]
}
