# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/deviceprofile/device_info_manager/deviceprofile.gni")

config("distributed_device_profile_sdk_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "include/callback",
    "${device_profile_common}/include/constants",
    "${device_profile_common}/include/interfaces",
    "${device_profile_common}/include/utils",
    "${device_profile_path}/radar/include",
  ]
}

ohos_shared_library("distributed_device_profile_sdk") {
  branch_protector_ret = "pac_ret"
  ldflags = [
    "-Wl,-z,relro",
    "-Wl,-z,now",
  ]

  cflags = [
    "-fPIC",
    "-fstack-protector-strong",
    "-D_FORTIFY_SOURCE=2",
    "-O2",
  ]

  cflags_cc = cflags

  sanitize = {
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
    debug = false
  }

  install_enable = true

  sources = [
    "src/callback/device_profile_load_callback.cpp",
    "src/distributed_device_profile_client.cpp",
    "src/distributed_device_profile_proxy.cpp",
  ]

  public_configs = [ ":distributed_device_profile_sdk_config" ]

  deps = [
    "${device_profile_common}:distributed_device_profile_common",
    "${device_profile_path}/radar:device_profile_radar",
  ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
    "relational_store:native_rdb",
    "samgr:samgr_proxy",
  ]

  part_name = "device_info_manager"
  subsystem_name = "deviceprofile"
}
